fix : issue with codeblock not showing numbers

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -5,5 +5,5 @@
 }
 
 body{
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
